--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
       <div class="container">
-        <h2 class="text-center">Portfolio</h2>
+        <h2 class="text-center">Portfólio</h2>
         <hr class="star-primary">
         <div class="row">
           <div class="col-sm-4 portfolio-item">
@@ -168,7 +168,7 @@
             <div class="footer-col col-md-4">
             </div>
             <div class="footer-col col-md-4">
-              <h3>Around the Web</h3>
+              <h3>Redes Sociais</h3>
               <ul class="list-inline">
                 <li class="list-inline-item">
                   <a class="btn-social btn-outline" href="#">
