Quadros no sobre nós

--- a/index.html
+++ b/index.html
@@ -138,10 +138,15 @@
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p>Somos uma empresa de consultoria em computação e TI, atuamos na área a muitos anos atendendo clientes em vários tipos de serviços envolvendo tecnologia.</p>
+            <p>Descrição:
+             Somos uma empresa de consultoria em computação e TI, atuamos na área a muitos anos atendendo clientes em vários tipos de serviços envolvendo tecnologia.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p>Trabalhamos com sites expositivos, sistemas feitos sob medida, manutenção e consultoria sobre tecnologias.</p>
+            <p>Valores:
+             Trabalhamos com sites expositivos, sistemas feitos sob medida, manutenção e consultoria sobre tecnologias.</p>
+          </div>
+          <div class="col-lg-4 mr-auto">
+            <p>Missão:</p>
           </div>
         </div>
       </div>
