--- a/index.html
+++ b/index.html
@@ -246,20 +246,20 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Titulo do Projeto</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/con1.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Aqui você pode descrever algum projeto passado!
+                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/"></a>. </p>
                   <ul class="list-inline item-details">
                     <li>Client:
                       <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        <a href="http://startbootstrap.com">Nome</a>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>Data:
                       <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
+                        <a href="http://startbootstrap.com">Outubro 2017</a>
                       </strong>
                     </li>
                     <li>Service:
@@ -270,7 +270,7 @@
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
-                    Close</button>
+                    Fechar</button>
                 </div>
               </div>
             </div>
@@ -290,20 +290,20 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Titulo do Projeto</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/con2.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Aqui você pode descrever algum projeto passado!
+                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/"></a></p>
                   <ul class="list-inline item-details">
                     <li>Client:
                       <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        <a href="http://startbootstrap.com">Nome</a>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>Data:
                       <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
+                        <a href="http://startbootstrap.com">Outubro 2017</a>
                       </strong>
                     </li>
                     <li>Service:
@@ -314,7 +314,7 @@
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
-                    Close</button>
+                    Fechar</button>
                 </div>
               </div>
             </div>
@@ -334,20 +334,20 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Titulo do Projeto</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/con3.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Aqui você pode descrever algum projeto passado!
+                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/"></a></p>
                   <ul class="list-inline item-details">
-                    <li>Client:
+                    <li>Cliente:
                       <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        <a href="http://startbootstrap.com">Nome</a>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>Data:
                       <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
+                        <a href="http://startbootstrap.com">Outubro 2017</a>
                       </strong>
                     </li>
                     <li>Service:
@@ -358,7 +358,7 @@
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
-                    Close</button>
+                    Fechar</button>
                 </div>
               </div>
             </div>
@@ -378,20 +378,20 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Titulo do Projeto</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/con4.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Aqui você pode descrever algum projeto passado!
+                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/"></a></p>
                   <ul class="list-inline item-details">
-                    <li>Client:
+                    <li>Cliente:
                       <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        <a href="http://startbootstrap.com">Nome</a>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>Data:
                       <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
+                        <a href="http://startbootstrap.com">Outubro 2017</a>
                       </strong>
                     </li>
                     <li>Service:
@@ -402,7 +402,7 @@
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
-                    Close</button>
+                    Fechar</button>
                 </div>
               </div>
             </div>
@@ -422,20 +422,20 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Titulo do Projeto</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/con5.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Aqui você pode descrever algum projeto passado!
+                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/"></a></p>
                   <ul class="list-inline item-details">
-                    <li>Client:
+                    <li>Cliente:
                       <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        <a href="http://startbootstrap.com">Nome</a>
                       </strong>
                     </li>
-                    <li>Date:
+                    <li>Data:
                       <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
+                        <a href="http://startbootstrap.com">Outubro 2017</a>
                       </strong>
                     </li>
                     <li>Service:
@@ -446,7 +446,7 @@
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
-                    Close</button>
+                    Fechar</button>
                 </div>
               </div>
             </div>
@@ -466,20 +466,20 @@
             <div class="row">
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
-                  <h2>Project Title</h2>
+                  <h2>Titulo do Projeto</h2>
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/con6.png" alt="">
-                  <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                  <p>Aqui você pode descrever algum projeto passado!
+                    <a href="https://sellfy.com/p/8Q9P/jV3VZ/"></a></p>
                   <ul class="list-inline item-details">
-                    <li>Client:
+                    <li>Clients:
                       <strong>
-                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                        <a href="http://startbootstrap.com">Nome</a>
                       </strong>
                     </li>
                     <li>Date:
                       <strong>
-                        <a href="http://startbootstrap.com">April 2014</a>
+                        <a href="http://startbootstrap.com">AOutubro 2017/a>
                       </strong>
                     </li>
                     <li>Service:
@@ -490,7 +490,7 @@
                   </ul>
                   <button class="btn btn-success" type="button" data-dismiss="modal">
                     <i class="fa fa-times"></i>
-                    Close</button>
+                    Fechar</button>
                 </div>
               </div>
             </div>
