--- a/index.html
+++ b/index.html
@@ -149,6 +149,47 @@
             <p>Missão:</p>
           </div>
         </div>
+        <div class="team text-center py-5">
+        	<h3>Time</h3>
+        	<div class="row">
+        		<div class="team-member col-lg-4 col-6 p-3">
+        			<img class="img-fluid" src="img/conporfile.png">        			
+        			<h4 class="p-3">João</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.</p>
+        		</div>
+            <div class="team-member col-lg-4 col-6 p-3">
+              <img class="img-fluid" src="img/conporfile.png">     			
+        			<h4 class="p-3">João</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.</p>
+        		</div>
+            <div class="team-member col-lg-4 col-6 p-3">
+              <img class="img-fluid" src="img/conporfile.png">     			
+        			<h4 class="p-3">João</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.</p>
+        		</div>
+            <div class="team-member col-lg-4 col-6 p-3">
+              <img class="img-fluid" src="img/conporfile.png">       			
+        			<h4 class="p-3">João</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.</p>
+        		</div>
+            <div class="team-member col-lg-4 col-6 p-3">
+              <img class="img-fluid" src="img/conporfile.png">     			
+        			<h4 class="p-3">João</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.</p>
+        		</div>
+            <div class="team-member col-lg-4 col-6 p-3">
+              <img class="img-fluid" src="img/conporfile.png">        			
+        			<h4 class="p-3">João</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua.</p>
+        		</div>
+        	</div>
+        </div>
       </div>
     </section>
 
