--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- About Section -->
     <section class="success" id="about">
       <div class="container">
-        <h2 class="text-center">Sobre nós</h2>
+        <h2 class="text-center sobre">Sobre nós</h2>
         <hr class="star-light">
         <div class="row">
           <div class="col-lg-4 ml-auto">
@@ -149,39 +149,39 @@
             <p>Missão:</p>
           </div>
         </div>
-        <div class="team text-center py-5">
-        	<h2 class="pt-3 pb-3">Time</h2>
+        <div class="text-center py-5">
+        	<h2 class="pt-3 pb-3" id="team">Time</h2>
         	<div class="row">
-        		<div class="team-member col-lg-4 col-6 p-3">
-        			<img class="img-fluid" src="img/conporfile.png">        			
+        		<div class="team-member col-lg-4 col-6 px-auto py-4">
+        			<img class="img-fluid img-member" src="img/conporfile.png">        			
         			<h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
         		</div>
-            <div class="team-member col-lg-4 col-6 p-3">
-              <img class="img-fluid" src="img/conporfile.png">     			
-        			<h4 class="p-3">João</h4>
+            <div class="team-member col-lg-4 col-6 px-auto py-4">
+              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-        		</div>
-            <div class="team-member col-lg-4 col-6 p-3">
-              <img class="img-fluid" src="img/conporfile.png">     			
-        			<h4 class="p-3">João</h4>
+            </div>
+            <div class="team-member col-lg-4 col-6 px-auto py-4">
+              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-        		</div>
-            <div class="team-member col-lg-4 col-6 p-3">
-              <img class="img-fluid" src="img/conporfile.png">       			
-        			<h4 class="p-3">João</h4>
+            </div>
+            <div class="team-member col-lg-4 col-6 px-auto py-4">
+              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-        		</div>
-            <div class="team-member col-lg-4 col-6 p-3">
-              <img class="img-fluid" src="img/conporfile.png">     			
-        			<h4 class="p-3">João</h4>
+            </div>
+            <div class="team-member col-lg-4 col-6 px-auto py-4">
+              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-        		</div>
-            <div class="team-member col-lg-4 col-6 p-3">
-              <img class="img-fluid" src="img/conporfile.png">        			
-        			<h4 class="p-3">João</h4>
+            </div>
+            <div class="team-member col-lg-4 col-6 px-auto py-4">
+              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-        		</div>
+            </div>
         	</div>
         </div>
       </div>
