--- a/index.html
+++ b/index.html
@@ -151,33 +151,33 @@
         </div>
         <div class="text-center py-5">
         	<h2 class="pt-3 pb-3" id="team">Time</h2>
-        	<div class="row">
-        		<div class="team-member col-lg-4 col-6 px-auto py-4">
+        	<div class="row team-box">
+        		<div class="team-member col-lg-4 col-6 px-auto pb-4">
         			<img class="img-fluid img-member" src="img/conporfile.png">        			
         			<h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
         		</div>
-            <div class="team-member col-lg-4 col-6 px-auto py-4">
+            <div class="team-member col-lg-4 col-6 px-auto pb-4">
               <img class="img-fluid img-member" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
-            <div class="team-member col-lg-4 col-6 px-auto py-4">
+            <div class="team-member col-lg-4 col-6 px-auto pb-4">
               <img class="img-fluid img-member" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
-            <div class="team-member col-lg-4 col-6 px-auto py-4">
+            <div class="team-member col-lg-4 col-6 px-auto pb-4">
               <img class="img-fluid img-member" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
-            <div class="team-member col-lg-4 col-6 px-auto py-4">
+            <div class="team-member col-lg-4 col-6 px-auto pb-4">
               <img class="img-fluid img-member" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
-            <div class="team-member col-lg-4 col-6 px-auto py-4">
+            <div class="team-member col-lg-4 col-6 px-auto pb-4">
               <img class="img-fluid img-member" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
