--- a/index.html
+++ b/index.html
@@ -150,35 +150,35 @@
           </div>
         </div>
         <div class="text-center py-5">
-        	<h2 class="pt-3 pb-3" id="team">Time</h2>
+        	<h2 class="pt-3 pb-5" id="team">Time</h2>
         	<div class="row team-box">
         		<div class="team-member col-lg-4 col-6 px-auto pb-4">
-        			<img class="img-fluid img-member" src="img/conporfile.png">        			
+        			<img class="img-fluid img-member0" src="img/conporfile.png">        			
         			<h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
         		</div>
             <div class="team-member col-lg-4 col-6 px-auto pb-4">
-              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <img class="img-fluid img-member0" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
             <div class="team-member col-lg-4 col-6 px-auto pb-4">
-              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <img class="img-fluid img-member0" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
             <div class="team-member col-lg-4 col-6 px-auto pb-4">
-              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <img class="img-fluid img-member1" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
             <div class="team-member col-lg-4 col-6 px-auto pb-4">
-              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <img class="img-fluid img-member1" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
             <div class="team-member col-lg-4 col-6 px-auto pb-4">
-              <img class="img-fluid img-member" src="img/conporfile.png">              
+              <img class="img-fluid img-member1" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
