--- a/index.html
+++ b/index.html
@@ -152,6 +152,37 @@
       </div>
     </section>
 
+    <!-- Donate Setion -->
+    <section id="donate">
+      <div class = "container">
+        <h2 class="text-center">Doe</h2>
+
+        <hr class="star-primary">
+    <h2 class="text-center"><form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+
+    <!-- Identify your business so that you can collect the payments. -->
+    <input type="hidden" name="business"
+        value="donations@kcparkfriends.org">
+
+    <!-- Specify a Donate button. -->
+    <input type="hidden" name="cmd" value="_donations">
+
+    <!-- Specify details about the contribution -->
+    <input type="hidden" name="item_name" value="Friends of the Park">
+    <input type="hidden" name="item_number" value="Fall Cleanup Campaign">
+    <input type="hidden" name="currency_code" value="USD">
+
+    <!-- Display the payment button. -->
+    <input type="image" name="submit"
+    src="img/donate.png"
+    alt="Donate">
+    <img alt="" width="1" height="1"
+    src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+
+    </form></h2>  
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact">
       <div class="container">
@@ -210,7 +241,6 @@
               </ul>
             </div>
             <div class="footer-col col-md-4">
-              
             </div>
           </div>
         </div>
