Estrela na seção Time

--- a/index.html
+++ b/index.html
@@ -150,7 +150,8 @@
           </div>
         </div>
         <div class="text-center py-5">
-        	<h2 class="pt-3 pb-5" id="team">Time</h2>
+        	<h2 class="pt-3" id="team">Time</h2>
+          <hr class="star-light">
         	<div class="row team-box">
         		<div class="team-member col-lg-4 col-6 px-auto pb-4">
         			<img class="img-fluid img-member-lg-0 img-member-0" src="img/conporfile.png">        			
