mudança de cores

--- a/index.html
+++ b/index.html
@@ -196,14 +196,16 @@
             <p>Missão:</p>
           </div>
         </div>
-        <div class="text-center py-5">
-        	<h2 class="pt-3 pb-5" id="team">Time</h2>
-        	<div class="row team-box">
-        		<div class="team-member col-lg-4 col-6 px-auto pb-4">
-        			<img class="img-fluid img-member0" src="img/conporfile.png">        			
-        			<h4 class="p-3">João</h4>
-              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-        		</div>
+        
+      </div>
+    </section>
+
+    <section id = "team">
+      <div class = "container">
+      <div class="text-center py-5">
+          <h2 class="text-center">Time</h2>
+          <hr class="star-primary">
+          <div class="row team-box">
             <div class="team-member col-lg-4 col-6 px-auto pb-4">
               <img class="img-fluid img-member0" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
@@ -215,7 +217,7 @@
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
             <div class="team-member col-lg-4 col-6 px-auto pb-4">
-              <img class="img-fluid img-member1" src="img/conporfile.png">              
+              <img class="img-fluid img-member0" src="img/conporfile.png">              
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
@@ -229,17 +231,22 @@
               <h4 class="p-3">João</h4>
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
             </div>
-        	</div>
+            <div class="team-member col-lg-4 col-6 px-auto pb-4">
+              <img class="img-fluid img-member1" src="img/conporfile.png">              
+              <h4 class="p-3">João</h4>
+              <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- Donate Setion -->
-    <section id="donate">
+    <section class = "success" id="donate">
       <div class = "container">
         <h2 class="text-center">Doe</h2>
 
-        <hr class="star-primary">
+        <hr class="star-light">
     <h2 class="text-center"><form action="https://www.paypal.com/cgi-bin/webscr" method="post">
 
     <!-- Identify your business so that you can collect the payments. -->
