correção bug carousel

--- a/index.html
+++ b/index.html
@@ -65,10 +65,12 @@
       </div>
 
       <div class="mySlides">
+        <div class="numbertext">3 / 4</div>
         <img src="img/portfolio/img3.jpg" style="width:100%">
       </div>
 
       <div class="mySlides">
+        <div class="numbertext">4 / 4</div>
         <img src="img/portfolio/img4.jpg" style="width:100%">
       </div>
 
